--- a/swagger/JWTProfile.yaml
+++ b/swagger/JWTProfile.yaml
@@ -3,7 +3,7 @@
 swagger: '2.0'
 info:
     version: '21.1.1'
-    title: Avi WafCRS Object API
+    title: Avi JWTProfile Object API
     contact:
         name: Avi Networks Inc.
         url: https://avinetworks.com/contact-us
@@ -11,8 +11,8 @@ info:
     description: |
         CLI
         ```
-        - show wafcrs <key>
-        - configure wafcrs <key>
+        - configure jwtprofile <key>
+        - show jwtprofile <key>
         ```
 
 
@@ -22,7 +22,7 @@ securityDefinitions:
         description: basic authentication
 basePath: /api
 paths:
-    /wafcrs:
+    /jwtprofile:
         get:
             consumes:
                 -   application/json
@@ -86,7 +86,7 @@ paths:
                 200:
                     description: OK
                     schema:
-                        $ref: "#/definitions/WafCRSApiResponse"
+                        $ref: "#/definitions/JWTProfileApiResponse"
                 401:
                     description: log in failed
         post:
@@ -117,20 +117,20 @@ paths:
                     description: Avi Controller may send back CSRF token in the response cookies. The caller should update the request headers with this token else controller will reject requests.
                 -   in: body
                     name: body
-                    description: WafCRS object creation
+                    description: JWTProfile object creation
                     required: true
                     schema:
-                        $ref: "#/definitions/WafCRS"
+                        $ref: "#/definitions/JWTProfile"
             security:
                 - basicAuth: []
             responses:
                 200:
                     description: OK
                     schema:
-                        $ref: "#/definitions/WafCRS"
+                        $ref: "#/definitions/JWTProfile"
                 401:
                     description: log in failed
-    /wafcrs/{uuid}:
+    /jwtprofile/{uuid}:
         get:
             consumes:
                 -   application/json
@@ -191,7 +191,7 @@ paths:
                 200:
                     description: OK
                     schema:
-                        $ref: "#/definitions/WafCRS"
+                        $ref: "#/definitions/JWTProfile"
                 401:
                     description: log in failed
         put:
@@ -227,10 +227,10 @@ paths:
                     description: Avi Controller may send back CSRF token in the response cookies. The caller should update the request headers with this token else controller will reject requests.
                 -   in: body
                     name: body
-                    description: WafCRS object creation
+                    description: JWTProfile object creation
                     required: true
                     schema:
-                        $ref: "#/definitions/WafCRS"
+                        $ref: "#/definitions/JWTProfile"
                 -   in: path
                     name: uuid
                     description: UUID of the object to fetch
@@ -242,7 +242,7 @@ paths:
                 200:
                     description: OK
                     schema:
-                        $ref: "#/definitions/WafCRS"
+                        $ref: "#/definitions/JWTProfile"
                 401:
                     description: log in failed
         patch:
@@ -278,10 +278,10 @@ paths:
                     description: Avi Controller may send back CSRF token in the response cookies. The caller should update the request headers with this token else controller will reject requests.
                 -   in: body
                     name: body
-                    description: WafCRS object creation
+                    description: JWTProfile object creation
                     required: true
                     schema:
-                        $ref: "#/definitions/WafCRS"
+                        $ref: "#/definitions/JWTProfile"
                 -   in: path
                     name: uuid
                     description: UUID of the object to fetch
@@ -293,7 +293,7 @@ paths:
                 200:
                     description: OK
                     schema:
-                        $ref: "#/definitions/WafCRS"
+                        $ref: "#/definitions/JWTProfile"
                 401:
                     description: log in failed
         delete:
@@ -343,76 +343,103 @@ paths:
                     description: not found
 
 
+    /jwtprofile/{uuid}/federated_info/:
+        get:
+            consumes:
+                -   application/json
+            produces:
+                -   application/json
+            parameters:
+                -   in: header
+                    name: X-Avi-Tenant
+                    type: string
+                    required: false
+                    description: Avi Tenant Header
+                -   name: X-Avi-Tenant-UUID
+                    in: header
+                    type: string
+                    required: false
+                    description: Avi Tenant Header UUID
+                -   name: X-CSRFToken
+                    in: header
+                    type: string
+                    required: false
+                    description: Avi Controller may send back CSRF token in the response cookies. The caller should update the request headers with this token else controller will reject requests.
+                -   name: X-Avi-Version
+                    in: header
+                    type: string
+                    required: true
+                    description: The caller is required to set Avi Version Header to the expected version of configuration. The response from the controller will provide and accept data according to the specified version. The controller will reject POST and PUT requests where the data is not compatible with the specified version.
+                -   in: path
+                    name: uuid
+                    description: UUID of the object to fetch
+                    required: true
+                    type: string
+            security:
+                - basicAuth: []
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        type: string
+                401:
+                    description: log in failed
 definitions:
-    IpAddr:
+    JWSKey:
         type: object
         required:
-            -   addr
-            -   type
+            -   key
+            -   kid
         properties:
-            addr:
-                description: "IP address."
+            alg:
+                description: "Algorithm that need to be used while signing/validation. Field introduced in 20.1.5."
                 type: string
-            type:
-                description: " Enum options - V4, DNS, V6."
+                default: "HS256"
+            key:
+                description: "Secret JWK for signing. Field introduced in 20.1.5."
                 type: string
-    IpAddrPrefix:
+            kid:
+                description: "Unique key id for the key. Field introduced in 20.1.5."
+                type: string
+            kty:
+                description: "Secret key type/format. Field introduced in 20.1.5."
+                type: string
+                default: "oct"
+    JWTProfile:
         type: object
         required:
-            -   ip_addr
-            -   mask
-        properties:
-            ip_addr:
-                description: "Placeholder for description of property ip_addr of obj type IpAddrPrefix field type str  type object"
-                $ref: '#/definitions/IpAddr'
-            mask:
-                description: "Number of mask."
-                type: integer
-                format: int32
-    WafCRS:
-        type: object
-        required:
-            -   description
-            -   integrity
+            -   jwt_auth_type
             -   name
-            -   release_date
-            -   version
         properties:
             _last_modified:
                 description: "UNIX time since epoch in microseconds. Units(MICROSECONDS)."
                 readOnly: True
                 type: string
-            description:
-                description: "A short description of this ruleset. Field introduced in 18.1.1."
-                type: string
-            groups:
-                description: "WAF Rules are sorted in groups based on their characterization. Field introduced in 18.1.1. Maximum of 64 items allowed."
+            is_federated:
+                description: "This field describes the object's replication scope. If the field is set to false, then the object is visible within the controller-cluster.  If the field is set to true, then the object is replicated across the federation.  . Field introduced in 20.1.5. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
+                type: boolean
+            jwks_keys:
+                description: "JWK keys used for signing/validating the JWT. Field introduced in 20.1.5. Minimum of 1 items required. Maximum of 1 items allowed."
                 type: array
                 items:
-                    $ref: '#/definitions/WafRuleGroup'
-            integrity:
-                description: "Integrity protection value. Field introduced in 18.2.1."
+                    $ref: '#/definitions/JWSKey'
+            jwt_auth_type:
+                description: "JWT auth type for JWT validation. Enum options - JWT_TYPE_JWS. Field introduced in 20.1.5."
                 type: string
             name:
-                description: "The name of this ruleset object. Field introduced in 18.2.1."
-                type: string
-            release_date:
-                description: "The release date of this version in RFC 3339 / ISO 8601 format. Field introduced in 18.1.1."
+                description: "A user friendly name for this jwt profile. Field introduced in 20.1.5."
                 type: string
             tenant_ref:
-                description: "Tenant that this object belongs to. It is a reference to an object of type Tenant. Field introduced in 18.2.1."
+                description: "UUID of the Tenant. It is a reference to an object of type Tenant. Field introduced in 20.1.5."
                 type: string
             url:
                 description: "url"
                 readOnly: True
                 type: string
             uuid:
-                description: " Field introduced in 18.1.1."
+                description: "UUID of the jwt profile. Field introduced in 20.1.5."
                 type: string
-            version:
-                description: "The version of this ruleset object. Field introduced in 18.1.1."
-                type: string
-    WafCRSApiResponse:
+    JWTProfileApiResponse:
         type: object
         required:
             - count
@@ -424,119 +451,6 @@ definitions:
             results:
                 type: array
                 items:
-                    $ref: "#/definitions/WafCRS"
+                    $ref: "#/definitions/JWTProfile"
             next:
                 type: string
-    WafExcludeListEntry:
-        type: object
-        properties:
-            client_subnet:
-                description: "Client IP Subnet to exclude for WAF rules. Field introduced in 17.2.1."
-                $ref: '#/definitions/IpAddrPrefix'
-            description:
-                description: "Free-text comment about this exclusion. Field introduced in 18.2.6."
-                type: string
-            match_element:
-                description: "The match_element can be 'ARGS xxx', 'ARGS_GET xxx', 'ARGS_POST xxx', 'ARGS_NAMES xxx', 'FILES xxx', 'QUERY_STRING', 'REQUEST_BASENAME', 'REQUEST_BODY', 'REQUEST_URI', 'REQUEST_URI_RAW', 'REQUEST_COOKIES xxx', 'REQUEST_HEADERS xxx', 'RESPONSE_HEADERS xxx' or XML xxx. These match_elements in the HTTP Transaction (if present) will be excluded when executing WAF Rules. Field introduced in 17.2.1."
-                type: string
-            match_element_criteria:
-                description: "Criteria for match_element matching. Field introduced in 18.2.2."
-                $ref: '#/definitions/WafExclusionType'
-            uri_match_criteria:
-                description: "Criteria for URI matching. Field introduced in 17.2.8."
-                $ref: '#/definitions/WafExclusionType'
-            uri_path:
-                description: "URI Path to exclude for WAF rules. Field introduced in 17.2.1."
-                type: string
-    WafExclusionType:
-        type: object
-        required:
-            -   match_case
-            -   match_op
-        properties:
-            match_case:
-                description: "Case sensitivity to use for the matching. Enum options - SENSITIVE, INSENSITIVE. Field introduced in 17.2.8."
-                type: string
-                default: "SENSITIVE"
-            match_op:
-                description: "String Operation to use for matching the Exclusion. Enum options - BEGINS_WITH, DOES_NOT_BEGIN_WITH, CONTAINS, DOES_NOT_CONTAIN, ENDS_WITH, DOES_NOT_END_WITH, EQUALS, DOES_NOT_EQUAL, REGEX_MATCH, REGEX_DOES_NOT_MATCH. Field introduced in 17.2.8."
-                type: string
-                default: "EQUALS"
-    WafRule:
-        type: object
-        required:
-            -   enable
-            -   index
-            -   rule
-        properties:
-            enable:
-                description: "Enable or disable WAF Rule Group. Field introduced in 17.2.1."
-                type: boolean
-                default: True
-            exclude_list:
-                description: "Exclude list for the WAF rule. The fields in the exclude list entry are logically and'ed to deduce the exclusion criteria. If there are multiple excludelist entries, it will be 'logical or' of them. Field introduced in 17.2.3. Maximum of 64 items allowed."
-                type: array
-                items:
-                    $ref: '#/definitions/WafExcludeListEntry'
-            force_detection:
-                description: "When set to 'true', this rule will not cause 'deny' or 'redirect' actions to run, even if WAF Policy is set to enforcement mode. The behavior would be as if this rule operated in detection mode regardless of WAF Policy setting. Field deprecated in 18.1.5. Field introduced in 18.1.4."
-                type: boolean
-            index:
-                description: " Field introduced in 17.2.1."
-                type: integer
-                format: int32
-            is_sensitive:
-                description: "The rule field is sensitive and will not be displayed. Field introduced in 20.1.1."
-                type: boolean
-            mode:
-                description: "WAF Rule mode. This can be detection or enforcement. If this is not set, the Policy mode is used. This only takes effect if the policy allows delegation. Enum options - WAF_MODE_DETECTION_ONLY, WAF_MODE_ENFORCEMENT. Field introduced in 18.1.5, 18.2.1."
-                type: string
-            name:
-                description: "User-friendly optional name for a rule. Field introduced in 17.2.1."
-                type: string
-            phase:
-                description: "The execution phase where this rule will be executed. Enum options - WAF_PHASE_CONNECTION, WAF_PHASE_REQUEST_HEADER, WAF_PHASE_REQUEST_BODY, WAF_PHASE_RESPONSE_HEADER, WAF_PHASE_RESPONSE_BODY, WAF_PHASE_LOGGING. Field introduced in 20.1.1."
-                readOnly: True
-                type: string
-            rule:
-                description: "Rule as per Modsec language. Field introduced in 17.2.1."
-                type: string
-            rule_id:
-                description: "Identifier (id) for a rule per Modsec language. All SecRule and SecAction directives require an id. It is extracted from the id action in a ModSec rule. Rules within a single WAF Policy are required to have unique rule_ids. Field introduced in 17.2.2."
-                type: string
-            tags:
-                description: "Tags for WAF rule as per Modsec language. They are extracted from the tag action in a ModSec rule. Field introduced in 18.1.3. Maximum of 64 items allowed."
-                type: array
-                items:
-                    type: string
-    WafRuleGroup:
-        type: object
-        required:
-            -   enable
-            -   index
-            -   name
-        properties:
-            enable:
-                description: "Enable or disable WAF Rule Group. Field introduced in 17.2.1."
-                type: boolean
-                default: True
-            exclude_list:
-                description: "Exclude list for the WAF rule group. The fields in the exclude list entry are logically and'ed to deduce the exclusion criteria. If there are multiple excludelist entries, it will be 'logical or' of them. Field introduced in 17.2.1. Maximum of 64 items allowed."
-                type: array
-                items:
-                    $ref: '#/definitions/WafExcludeListEntry'
-            force_detection:
-                description: "When set to 'true', any rule in this group will not cause 'deny' or 'redirect' actions to run, even if WAF Policy is set to enforcement mode. The behavior would be as if this rule operated in detection mode regardless of WAF Policy setting. Field deprecated in 18.1.5. Field introduced in 18.1.4."
-                type: boolean
-            index:
-                description: " Field introduced in 17.2.1."
-                type: integer
-                format: int32
-            name:
-                description: " Field introduced in 17.2.1."
-                type: string
-            rules:
-                description: "Rules as per Modsec language. Field introduced in 17.2.1. Maximum of 1024 items allowed."
-                type: array
-                items:
-                    $ref: '#/definitions/WafRule'
