--- a/swagger/NsxtSegmentRuntime.yaml
+++ b/swagger/NsxtSegmentRuntime.yaml
@@ -418,6 +418,11 @@ definitions:
             uuid:
                 description: "Uuid. Field introduced in 20.1.1."
                 type: string
+            vlan_ids:
+                description: "Segment Vlan ids. Field introduced in 20.1.5."
+                type: array
+                items:
+                    type: string
             vrf_context_ref:
                 description: "Corresponding vrf context object in Avi. It is a reference to an object of type VrfContext. Field introduced in 20.1.1."
                 type: string
